--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
   <div id='main'>
-    <canvas id="c1" width="1280" height="720"></canvas>
+    <canvas id="c1" width="300" height="300"></canvas>
     <!-- <canvas id="c2" width="1200" height="720"></canvas> -->
 
     <div id='menu'>
-      <p>Количество циклов: <span id="count">0</span></p>
+      <!-- <p>Количество циклов: <span id="count">0</span></p> -->
       <button id="start">Start</button>
-      <button id="stop">Stop</button>
-      <button id="rand">Rand</button>
-      <button id="res">Reset</button>
-      <button id="randColor">RandColor</button>
-      <input type="range" id='range' oninput="reset()"></input>
-      <p id='p'> </p>
+      <!-- <button id="stop">Stop</button> -->
+      <!-- <button id="rand">Rand</button> -->
+      <!-- <button id="res">Reset</button> -->
+      <!-- <button id="randColor">RandColor</button> -->
+      <!-- <input type="range" id='range' oninput="reset()"></input> -->
+      <!-- <p id='p'> </p> -->
     </div>
   </div>
 </body>
