--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Игра жизнь</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
@@ -14,16 +14,16 @@
     <canvas id="c1" width="300" height="300"></canvas>
     <!-- <canvas id="c2" width="1200" height="720"></canvas> -->
 
-    <div id='menu'>
+    <!-- <div id='menu'> -->
       <!-- <p>Количество циклов: <span id="count">0</span></p> -->
-      <button id="start">Start</button>
+      <!-- <button id="start">Start</button> -->
       <!-- <button id="stop">Stop</button> -->
       <!-- <button id="rand">Rand</button> -->
       <!-- <button id="res">Reset</button> -->
       <!-- <button id="randColor">RandColor</button> -->
       <!-- <input type="range" id='range' oninput="reset()"></input> -->
       <!-- <p id='p'> </p> -->
-    </div>
+    <!-- </div> -->
   </div>
 </body>
 
