--- a/index.html
+++ b/index.html
@@ -6,24 +6,20 @@
   <title>Игра жизнь</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
 
 <body>
   <div id='main'>
     <canvas id="c1" width="300" height="300"></canvas>
-    <!-- <canvas id="c2" width="1200" height="720"></canvas> -->
 
-    <!-- <div id='menu'> -->
-      <!-- <p>Количество циклов: <span id="count">0</span></p> -->
-      <!-- <button id="start">Start</button> -->
-      <!-- <button id="stop">Stop</button> -->
-      <!-- <button id="rand">Rand</button> -->
-      <!-- <button id="res">Reset</button> -->
-      <!-- <button id="randColor">RandColor</button> -->
-      <!-- <input type="range" id='range' oninput="reset()"></input> -->
-      <!-- <p id='p'> </p> -->
-    <!-- </div> -->
+    <div id='menu'>
+      Menu:<br></br>
+      shift+click = startRect;<br>
+      ctrl+ click = finishRect;<br>
+      click = let;<br>
+      alt+click = clearRect;<br>
+      enter = begin;<br>
+    </div>
   </div>
 </body>
 
